--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Slight.gq is a super easy to use, quick, no tracking URL shortener. It supports:
 <html>
 
 <body style="visibility: hidden;" onload="display()">
-	<div id="app" class="inset-center h-full flex flex-col justify-center items-center" style="max-width: 60vw; min-width: 60vw;">
+	<div id="app" class="inset-center h-full flex flex-col justify-center items-center" style="max-width: 600px; width: 60vw;">
 		<h1 class="text-center text-gray-600 text-2xl font-extrabold m-3">
 			URL Shortener
 		</h1>
